# pi5-scada

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-29-pi5-scada-backend-foundation.md
docs/superpowers/specs/: 2026-05-29-pi5-scada-design.md
src/pi5_scada/: app.py  config.py  db.py  models.py  repositories.py  schemas.py
src/pi5_scada/api/: dashboard.py  health.py  records.py
tests/: conftest.py  test_config.py  test_dashboard_api.py  test_health_api.py  test_models.py  test_records_api.py
